examples/test/testpolicy12903.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12903
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key32: value48
      key25: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value27
          key26: value7
      podSelector:
        matchLabels:
          key25: value31
          key11: value20
